--- a/base.css
+++ b/base.css
@@ -116,6 +116,7 @@ h1, h2, h3 {
 }
 .content-section {
   height: 100%;
+  min-height: 40rem;
   width: 100%;
   padding-left: 5%;
   padding-top: 5%;
