--- a/base.css
+++ b/base.css
@@ -99,7 +99,16 @@ h1, h2, h3 {
   border-radius: 50%;
   margin-left: 9.8%;
   margin-top: 20px;
+}
+.circle-lines {
+  margin-top: 1%;
+  padding-left: 6%;
+}
+@media (max-width: 40rem) {
+  .circle-lines {
+    width: 50%;
   }
+}
 .about-text {
   margin-right: 15%;
   color: #58595B;
@@ -176,6 +185,7 @@ h1, h2, h3 {
 }
 
 @media (max-width: 40rem) {
-.home-img {
-  background-image: url("splash2.png"); 
+  .home-img {
+    background-image: url("splash2.png"); 
+  }
 }
