--- a/base.css
+++ b/base.css
@@ -19,19 +19,7 @@ h1, h2, h3 {
 	width: 90%;
 	margin-left: 5%;
 }
-.home {
-  flex-direction: column;
-  position: relative;
-}
-.home-img {
-  height: 80%;
-  margin-bottom: 1rem;
-  width: auto;
-  background-image: url("splash.png"); 
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-}
+
 .navbar {
   align-items: center;
   margin-top: 1rem;
@@ -77,6 +65,63 @@ h1, h2, h3 {
   background-color: #8DA9D4; 
   color: white;
 }
+.home {
+  flex-direction: column;
+  position: relative;
+}
+.home-img {
+  height: 80%;
+  position: relative;
+  margin-bottom: 1rem;
+  width: 100%;
+}
+#circleHolder {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+.splashBackground {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background-image: url("redef1.png"); 
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  z-index: 50;
+}
+.splashh {
+  position: absolute;
+  width: 3rem;
+  height: 3rem;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  /*transition: ease-in-out 10s;*/
+  transform: rotate(0deg);
+}
+.home-img {
+  height: 80%;
+  width: 100%;
+
+  position: relative;
+  overflow: hidden;
+}
+
+.splash1 {
+  border-radius: 50%;
+  background-image: url("bluecirc.png");
+}
+.splash2 {
+  border-radius: 50%;
+  background-image: url("redcirc.png");
+}
+.splash3 {
+  border-radius: 50%;
+  background-image: url("cyancirc.png");
+}
+
 .circle-group {
   display: flex;
   padding-bottom: 5%;
@@ -204,6 +249,9 @@ h1, h2, h3 {
     justify-content: center;
     align-items: center;
   }
+  .home-img {
+    height: 50%;
+  }
   .apply-button {
     margin: auto;
     margin-top: 0.5rem;
@@ -213,9 +261,6 @@ h1, h2, h3 {
   }
   .circle-lines {
     width: 50%;
-  }
-  .home-img {
-    background-image: url("splash21.png"); 
   }
   .about-img {
     display: none;
