--- a/base.css
+++ b/base.css
@@ -13,6 +13,12 @@ h1, h2, h3 {
   font-family: Comfortaa; 
     color: #8DA9D4;
 }
+
+h4, p {
+  font-family: Open Sans;
+  color: #58595B;
+  font-weight: 100;
+}
 .flex-container {
 	display: flex;
 	margin-right: 5%;
@@ -190,6 +196,42 @@ h1, h2, h3 {
   right: 0;
   bottom: 0;
   z-index: 0;
+}
+
+#speakers {
+  background-color: white;
+  height: auto;
+  min-height: auto;
+}
+
+#speakers-flex {
+  margin-left: 0;
+  margin-bottom: 15%;
+}
+
+#speaker-card {
+  height: 25%;
+  width: 25%;
+  text-align: center;
+}
+
+.speaker-pics {
+  height: 80%;
+  width: 80%;
+}
+
+#speaker-name {
+  margin-bottom: .1em;
+}
+
+.speak-pos {
+  font-weight: 100;
+  margin: 0 auto;
+}
+
+.speak-org {
+  font-weight: 900;
+  margin: 0 auto;
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
