--- a/base.css
+++ b/base.css
@@ -68,6 +68,9 @@ h1, h2, h3 {
   align-items: center;
   margin-top: 1rem;
 }
+.navbar {
+  margin-left: 2%;
+}
 .nav-title {
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
@@ -97,7 +100,6 @@ h1, h2, h3 {
   font-family: Comfortaa;
   font-size: 25px;
   margin-left: auto;
-
   border-width: 3px;
   border-top-left-radius: 21px;
   border-top-right-radius: 21px;
