--- a/base.css
+++ b/base.css
@@ -94,13 +94,15 @@ h1, h2, h3 {
   -webkit-transition-duration: 0.4s; /* Safari */
   transition-duration: 0.4s;
   background-color: rgba(1, 1, 1, 0);
-  border-color: #8DA9D4;
   color: #8DA9D4;
   padding: 0.5rem 1.5rem 0.5rem 1.5rem;
   font-family: Comfortaa;
   font-size: 25px;
+  text-decoration: none;
+  z-index: 99;
   margin-left: auto;
-  border-width: 3px;
+  border: 3px solid #8DA9D4;
+  text-align: center;
   border-top-left-radius: 21px;
   border-top-right-radius: 21px;
   border-bottom-left-radius: 21px;
@@ -251,9 +253,7 @@ h1, h2, h3 {
 #speakers-flex {
   flex-wrap: wrap;
   margin-left: 0;
-  /*margin-bottom: 15%;*/
   justify-content: space-around;
-  /*min-width: 30em;*/
 }
 
 #speaker-card {
@@ -345,15 +345,6 @@ h1, h2, h3 {
 .text-link {
   text-decoration: none;
   color: #8DA9D4;
-}
-.text-link-apply {
-    -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  text-decoration: none;
-  color: #8DA9D4;
-}
-.text-link-apply:hover {
-  color: white;
 }
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
