--- a/base.css
+++ b/base.css
@@ -276,15 +276,16 @@ h1, h2, h3 {
   width: 10em;
 }
 .speaker-pic-container {
+  display: flex;
   position: relative;
   text-align: center;
   justify-content: center;
 }
 
-/* Text display on hover */
-.speaker-pics:hover {
-  opacity: .6;
-}
+/*.speaker-pic-container:hover .speaker-pics {
+  opacity: 0.6;
+}*/
+
 .speaker_hover_text_title {
   position: absolute;
   left: 3%;
