--- a/base.css
+++ b/base.css
@@ -1,4 +1,5 @@
 /* about-img img is wrong. Theres more detail in the original */
+
 html {
   scroll-behavior: smooth;
 }
@@ -8,11 +9,13 @@ body {
   padding: 0px;
   margin: 0px;
   overflow-x: hidden;
+  color: #151041;
 }
 h1, h2, h3 {
-  font-family: Comfortaa;
-    color: #8DA9D4;
+  font-family: 'Nunito', sans-serif;
 }
+
+
 
 #title-box {
   text-align: center;
@@ -27,6 +30,8 @@ h1, h2, h3 {
 }
 
 #title-date-text {
+  font-family: 'Nunito', sans-serif;
+  font-weight: normal;
   font-size: 10vh;
   margin-top: 0;
 }
