--- a/base.css
+++ b/base.css
@@ -404,6 +404,10 @@ h1, h2, h3 {
   justify-content: center;
 }
 
+.splitFlexRowwise {
+  flex: 1;
+}
+
 .sponsorDivImg {
   width: 16rem;
   height: 8rem;
@@ -452,6 +456,13 @@ h1, h2, h3 {
   background-color: white;
 }
 
+#rowSplit1 {
+  flex: 0.1;
+}
+#rowSplit2 {
+  flex: 0.9;
+}
+
 @media (max-width: 40rem) {
   .navbar {
     margin-left: 0;
@@ -486,4 +497,132 @@ h1, h2, h3 {
     height: 10rem;
     margin: 1rem;
   }
+}
+
+
+
+/*
+Classes for the sponsor section
+*/
+
+.page {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
+/*
+Creates a rectangular container for the boxes
+*/
+.container {
+  width: 65%;
+  height: 74%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  border-left: 0.125rem solid black;
+  border-top: 0.125rem solid black;
+  background-color: white;
+  flex-direction: row;
+}
+
+
+.partial-border:after {
+  content: '';
+  border-bottom: 0.5rem solid black;
+  position: absolute;
+  width: 0%;
+  left: 0%;
+}
+
+
+.half-column {
+  flex: 1;
+  border-left: 0.125rem solid black;
+  border-top: 0.125rem solid black;
+  border-right: 0.125rem solid black;
+  border-bottom: 0.25rem solid black;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+}
+
+.half-row {
+  flex: 1;
+  border: 0.125rem solid black;
+  flex-direction: column;
+  flex-wrap: wrap;
+  display: flex;
+}
+
+/*
+.imgcontainer {
+  height: 24.0625rem;
+  width: 25.6875rem;
+}
+*/
+
+.box {
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(to right, #C2DF87 80.9%, white 80.9%);
+  border: 0rem solid white;
+  overflow: visible;
+  display: flex;
+}
+
+.dogImage {
+  height: 95%;
+  width: 85%;
+  margin-left: 6%;
+  margin-top: 3.5%;
+  overflow: visible;
+
+  border: 0rem solid white;
+  background-image: url(dog.png);
+}
+
+#noborder {
+  border: 0rem solid white;
+}
+
+#thiccBorderBottom {
+  border-bottom: 0.25rem solid black;
+  border-right: 0.25rem solid black;
+}
+
+#thiccBorderLeft {
+  border-top: 0rem solid black;
+  border-right: 0rem solid black;
+  border-bottom: 0rem solid black;
+}
+
+#thiccMargin {
+  border: 0rem solid white;
+  margin-top: 2.9vh;
+  margin-left: 3.65vw;
+}
+
+#smallRow {
+  flex: 0.43;
+  border: 0rem solid white;
+  margin-top: 2vh;
+  margin-left: 4.4vw;
+}
+
+#thiccBorderTop {
+  border-top: 0.25rem solid black;
+  border-right: 0rem solid black;
+  border-bottom: 0rem solid black;
+  border-left: 0rem solid black;
+}
+
+#blueBox {
+  background-color: #85AAB2;
+  padding-left: 6.25rem;
 }
