--- a/base.css
+++ b/base.css
@@ -513,6 +513,7 @@ Classes for the sponsor section
   justify-content: center;
   flex-wrap: wrap;
   align-items: center;
+  position: relative;
 }
 
 /*
@@ -567,24 +568,49 @@ Creates a rectangular container for the boxes
 }
 */
 
-.box {
+.greenBox {
   height: 100%;
   width: 100%;
-  background: linear-gradient(to right, #C2DF87 80.9%, white 80.9%);
+  background: linear-gradient(to right, #C2DF87 84.9%, white 84.9%);
   border: 0rem solid white;
   overflow: visible;
   display: flex;
 }
 
 .dogImage {
-  height: 95%;
+  height: 100%;
   width: 85%;
   margin-left: 6%;
   margin-top: 3.5%;
-  overflow: visible;
+  overflow: hidden;
 
   border: 0rem solid white;
   background-image: url(dog.png);
+}
+
+
+.blueBox {
+  position: absolute;
+  top: 19.5%;
+  left: 5.3%;
+  height: 33.8%;
+  width: 17.1%;
+  background: linear-gradient(to right, #85AAB2 100%, white 100%);
+  border: 0rem solid white;
+  overflow: visible;
+  display: flex;
+}
+
+.earImage {
+  position: absolute;
+  height: 34%;
+  width: 17.1%;
+  left: 6.4%;
+  top: 21%;
+  overflow: hidden;
+
+  border: 0rem solid white;
+  background-image: url(e4.png);
 }
 
 #noborder {
@@ -620,9 +646,4 @@ Creates a rectangular container for the boxes
   border-right: 0rem solid black;
   border-bottom: 0rem solid black;
   border-left: 0rem solid black;
-}
-
-#blueBox {
-  background-color: #85AAB2;
-  padding-left: 6.25rem;
 }
