--- a/base.css
+++ b/base.css
@@ -97,6 +97,23 @@ a {
     height: 70%;
 }
 
+#foot-img-box {
+  background: #85AAB2;
+  width: 25%;
+  height: 70%;
+  position: absolute;
+  top: 15vh;
+  right: -5vh;
+}
+#foot-img {
+  position: absolute;
+  left: 2vh;
+  top: 2vh;
+  width: 100%;
+  height: 100%;
+
+}
+
 .link-item {
     text-align: left;
     margin-top: 7.5%;
