--- a/base.css
+++ b/base.css
@@ -593,8 +593,8 @@ Creates a rectangular container for the boxes
   position: absolute;
   top: 19.5%;
   left: 5.3%;
-  height: 33.8%;
-  width: 17.1%;
+  height: 33.2%;
+  width: 16.65%;
   background: linear-gradient(to right, #85AAB2 100%, white 100%);
   border: 0rem solid white;
   overflow: visible;
@@ -603,8 +603,8 @@ Creates a rectangular container for the boxes
 
 .earImage {
   position: absolute;
-  height: 34%;
-  width: 17.1%;
+  height: 33%;
+  width: 16.65%;
   left: 6.4%;
   top: 21%;
   overflow: hidden;
@@ -637,8 +637,8 @@ Creates a rectangular container for the boxes
 #smallRow {
   flex: 0.43;
   border: 0rem solid white;
-  margin-top: 2vh;
-  margin-left: 4.4vw;
+  margin-top: 4%;
+  margin-left: 15%;
 }
 
 #thiccBorderTop {
